        remain pressed until mouse is released, ignoring
		  if inner the button area;
 - Setting delta to sceneNode minY when lesser than 0;
 - script: new functions: callAnimation, setAnimation, playSound;
 - New script to controll cattle idle behaviour;
 - Added support to md5 models and animations;
 - 3D messages could be static on Y axis;

 - New Models;
 - New Sound Effects;

BugFixes:
 - Fixed a possible double OpenAL stop when releasing an ogg_stream;
 - Fixed a undesired loop with a sound file lesser than the buffer;
 - script: Fixed a bug on jumping from "else if" statements when an 
           "if" was successfull;
 - sound: keep music playing if try to load same music file;
 - sun: Light w must be 1.0;
 - map: fix for mapLights set;

================================================
|                Version 0.8                   |
|            Released: 2011-12-19              |
================================================
 - Added view frustum culling for shadows;
 - map: Add object rotation to all axis;
 - Created scene and sceneNode abstractions;
 - New Bounding Box class;
 - Added character info text when mouse over portrait;
 - gui: defined mouse hint for all gui objects;
 - gui: added object visibility flag;
 - Added support to MacOSX;
 - Added shader for texture splatting (splatting now can be via
   ARB extensions or GLSL shader);
 - Added money split;
 - New models;
 - New mission: Old software factory computer;
 - New maps;
 - dntMapEditor: Show mouse world coordinates;
 - dntMapEditor: grid mode alternative on object XZ move;
 - dntMapEditor: Tool to select and edit objects;
 - Using code::blocks as default IDE for Windows build;

BugFixes:
 - Fixed a bug that freezes the game when drinking a beer (thanks 
 to zerberros for the bug report);
 - Fixed a bug that won't let remove of some objects from list;
 - Fixed a bug when leveling up a skill with effects applied;
 - Fixed white-shadows on some drivers;
